add api for string recommandation, fix #27
